--- a/src/components/styles/Menu.css
+++ b/src/components/styles/Menu.css
@@ -64,7 +64,7 @@
   font-size: 1.75em;
   text-decoration: none;
   text-shadow: 1px 1px 1px black;
-  transition-duration: 0.3s;
+  transition-duration: opacity 2s, 0.3s;
 }
 .theme1 .themebtn:hover {
   background-color: #a569bd;
@@ -141,7 +141,7 @@
   font-size: 1.75em;
   text-decoration: none;
   text-shadow: 1px 1px 1px black;
-  transition-duration: 0.3s;
+  transition-duration: opacity 2s, 0.3s;
 }
 .theme2 .themebtn:hover {
   background-color: cadetblue;
