--- a/src/components/SASS/Menu.scss
+++ b/src/components/SASS/Menu.scss
@@ -79,7 +79,7 @@
             font-size: 1.75em;
             text-decoration: none;
             text-shadow: 1px 1px 1px black;
-            transition-duration: 0.3s;
+            transition-duration: opacity 2s, 0.3s;
         }
 
         .themebtn:hover {
