--- a/src/components/SASS/App.scss
+++ b/src/components/SASS/App.scss
@@ -80,3 +80,44 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .App {
+        @each $theme, $map in $themes {
+            &.#{$theme} {
+                #input {
+                width: 250px;
+                }
+                input[type="radio"] {
+                    left: 80%;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1080px) {
+    .App {
+        @each $theme, $map in $themes {
+            &.#{$theme} {
+                #input {
+                    width: 700px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 2160px) {
+    .App {
+        @each $theme, $map in $themes {
+            &.#{$theme} {
+                #input {
+                    width: 1300px;
+                }
+            }
+        }
+    }
+}
+
+
